 CHANGES TO API
 --------------
 
 * actions/apiattachment.php                 New api action 
 * actions/apistatusesfavs.php               New api action
 * actions/apicheckhub.php                   New api action  (not used yet)
 * actions/apiexternalprofileshow.php        New api action  
 
 * lib/apiaction.php          
 
    - add urls to larger avatars
     
        ~LINE 213        
                        $avatar = $profile->getAvatar(AVATAR_STREAM_SIZE);
                        $twitter_user['profile_image_url'] = ($avatar) ? $avatar->displayUrl() :
                            Avatar::defaultImage(AVATAR_STREAM_SIZE);
                        $avatar = $profile->getAvatar(AVATAR_PROFILE_SIZE);
                        $twitter_user['profile_image_url_profile_size'] = ($avatar) ? $avatar->displayUrl() :
                            Avatar::defaultImage(AVATAR_PROFILE_SIZE);
                        $avatar = $profile->getOriginalAvatar();
                        $twitter_user['profile_image_url_original'] = ($avatar) ? $avatar->displayUrl() :
                            Avatar::defaultImage(AVATAR_PROFILE_SIZE); 
                        $groups = $profile->getGroups();
                        $groups_count = 0; while($groups->fetch()) $groups_count++;
                        $twitter_user['groups_count'] = $groups_count;   


    - add the uri-field
    
        ~line 330        
                        $twitter_status['uri'] = $notice->uri;
    

    - show if a notices is favorited by auth_user

        ~line 355        
                        if (isset($this->auth_user)) {
                            $this_profile = $this->auth_user->getProfile();
                            $twitter_status['favorited'] = $this->auth_user->hasFave($notice); 
                            $twitter_status['repeated'] = $this_profile->hasRepeated($notice->id);
                        } else {
                            $twitter_status['favorited'] = false; 